# admin-manager

./: .gitignore  LICENSE  README.md  package.json  vite.config.js
src/: App.css  App.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Add.jsx  BarChart.jsx  Dashboard.jsx  List.jsx  PieChart.jsx  Settings.jsx  Sidebar.jsx  ToDo.jsx
src/components/css/: Add.css  Dashboard.css  List.css  Settings.css  ToDo.css
